fix: :art: video

--- a/src/components/ProgrammingVideo.astro
+++ b/src/components/ProgrammingVideo.astro
@@ -6,7 +6,7 @@
   <h3>Programando en Acción</h3>
   <div class="video-container">
     <video controls autoplay muted loop>
-      <source src="./src/assets/video/programando.mp4" type="video/mp4" />
+      <source src="../assets/video/programando.mp4" type="video/mp4" />
       Tu navegador no soporta la etiqueta de video.
     </video>
   </div>
