feat: :art: Mejoras
xd

--- a/src/components/Donations.astro
+++ b/src/components/Donations.astro
@@ -17,7 +17,7 @@
     </div>
     <a href="https://www.paypal.com/paypalme/DAcevedoMorales" target="_blank" rel="noopener noreferrer"
         class="donacion-btn">
-      <img src="/src/assets/icons/paypal.svg" alt="PayPal" class="paypal-icon" />
+      <img src="/icons/paypal.svg" alt="PayPal" class="paypal-icon" />
       Donar con PayPal
     </a>
     <div class="corazon-animado">❤️</div>
