--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,6 +1,6 @@
 ---
 const carouselImages = Array.from({ length: 30 }, (_, i) => ({
-  src: `./src/assets/imgs/${i + 1}.webp`,
+  src: `/imgs/${i + 1}.webp`,
   alt: `Imagen de tecnología ${i + 1}`
 }));
 ---
